--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-subscriber-location.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-subscriber-location.conf
@@ -29,9 +29,9 @@ flux.has-post-queries = true
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/prequery_spark_ft_subscriber_location.hql"
 
-flux.inline.exec-queries += "TRUNCATE TABLE MON.SPARK_TT_SUBSCRIBER_LOCATION"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_SUBSCRIBER_LOCATION"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/compute_and_insert_into_spark_tt_subscriber_location.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/compute_and_insert_into_spark_ft_subscriber_location.hql"
 
-flux.inline.post-exec-queries += "TRUNCATE TABLE MON.SPARK_TT_SUBSCRIBER_LOCATION"
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.TT_SUBSCRIBER_LOCATION"
