--- a/PROD/CONF/RECYCLAGE/load-spark-ft-msisdn_recyclage.conf
+++ b/PROD/CONF/RECYCLAGE/load-spark-ft-msisdn_recyclage.conf
@@ -9,9 +9,9 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-var +=  {"key": "date_offset","value": 32}
 flux.spark.setup-var +=  {"key": "table_type","value": "FT"}
 flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_MSISDN_RECYCLAGE"}
-flux.spark.setup-var +=  {"key": "insert_date_column","value": "FT_INSERT_DATE"}
+flux.spark.setup-var +=  {"key": "insert_date_column","value": "INSERT_DATE"}
 flux.spark.setup-var +=  {"key": "database_table_name","value": "MON.SPARK_FT_MSISDN_RECYCLAGE"}
-flux.spark.setup-var +=  {"key": "table_partition","value": "TRANSACTION_BILLING_DATE"}
+flux.spark.setup-var +=  {"key": "table_partition","value": "EVENT_DATE"}
 
 flux.name = "LOAD_SPARK_FT_MSISDN_RECYCLAGE"
 
@@ -43,7 +43,6 @@ flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_NNP_SIMPLE_DESTINATION"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_MSISDN_RECYCLAGE"
-flux.inline.exec-queries += "create temporary function FN_GET_NNP_MSISDN_9_DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/RECYCLAGE/compute_and_insert_into_tt_zebra_active_user.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/RECYCLAGE/compute_and_insert_into_tt_msisdn_active_om.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/RECYCLAGE/compute_and_insert_into_tt_msisdn_recylcage.hql"
