--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-cra-gprs-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-cra-gprs-post.conf
@@ -54,7 +54,7 @@ flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_spark_ft_cra_gprs_post.hql"
 
 
-flux.inline.post-exec-queries += "ANALYZE TABLE MON.SPARK_FT_CRA_GPRS_POST PARTITION(SESSION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+//flux.inline.post-exec-queries += "ANALYZE TABLE MON.SPARK_FT_CRA_GPRS_POST PARTITION(SESSION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 flux.inline.post-exec-queries += "DELETE FROM AGG.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE = '###SLICE_VALUE###'"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_a_gprs_activity_post.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/spark_compute_and_insert_gprs_post_activity.hql"
