--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -1274,6 +1274,29 @@ crontasks +=
     ]
   }
 
+// Chargement FT A OVERDRAFT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_A_OVERDRAFT",
+    cron = "0 7 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-overdraft.conf",
+    taskType = "BATCH",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
+    timeout = "65 minutes",
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--conf spark.ui.port=50498"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
 // Chargement de ZEBRA FT REFILL
 crontasks +=
   {
@@ -1865,28 +1888,6 @@ crontasks +=
     ]
   }
 
-crontasks +=
-  {
-    instanceId = "LOAD_SPARK_FT_MARKETING_DATAMART",
-    cron = "0 53 */1 * * ?",
-    configFile = "/PROD/CONF/DATAMART/load-spark_ft-marketing-datamart.conf",
-    taskType = "BATCH"
-    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-      , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--conf spark.ui.port=50479"}
-      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
 
 crontasks +=
   {
@@ -2993,50 +2994,3 @@ crontasks +=
       , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_SPARK_FT_SUBSCRIPTION_SITE_DAY",
-    cron = "0 50 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-subscription-site-day.conf",
-    taskType = "BATCH"
-    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-      , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--conf spark.ui.port=50794"}
-      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
-
-  crontasks +=
-    {
-      instanceId = "LOAD_SPARK_FT_A_REVENU_SITE_AMN",
-      cron = "0 55 * * * ?",
-      configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-revenu-site-amn.conf",
-      taskType = "BATCH"
-      taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-      timeout = "55 minutes"
-      extraTaskParams : [
-        {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
-        , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-        , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-        , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-        , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-        , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-        , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-        , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-        , {"param" : "--conf spark.network.timeout=360s"}
-        , {"param" : "--conf spark.ui.port=50795"}
-        , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-      ]
-    }
