--- a/PROD/CONF/FT_A_GPRS_LOCATION/load-spark-ft-a-gprs-location.conf
+++ b/PROD/CONF/FT_A_GPRS_LOCATION/load-spark-ft-a-gprs-location.conf
@@ -14,11 +14,19 @@ flux.name = "LOAD_SPARK_FT_A_GPRS_LOCATION"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
+flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    date_format(datecode,'yyyy-MM-dd')
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct session_date from agg.spark_ft_a_gprs_location where session_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
 flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
