--- a/PROD/CONF/FT_GROSS_ADD_COMPETITIORS/load-spark-ft-operator-acct-activity.conf
+++ b/PROD/CONF/FT_GROSS_ADD_COMPETITIORS/load-spark-ft-operator-acct-activity.conf
@@ -18,11 +18,19 @@ flux.name = "LOAD_SPARK_FT_OPERATOR_ACCT_ACTIVITY"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
+flux.slice-begin-value = -7
 flux.slice-end-value = 0
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    date_format(datecode,'yyyy-MM-dd')
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct event_date from MON.SPARK_FT_OPERATOR_ACCT_ACTIVITY where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
 flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
