--- a/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-voice-sms-da-usage-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-voice-sms-da-usage-daily.conf
@@ -23,6 +23,14 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-state-query=true
+flux.slice-state-query="""
+select  if(count(*)=7,'OK','NOK')
+
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct TRANSACTION_DATE from mon.SPARK_FT_VOICE_SMS_DA_USAGE_DAILY where TRANSACTION_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
+""""""
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
