--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-handset-monthly.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-handset-monthly.conf
@@ -21,6 +21,14 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-state-query=true
+flux.slice-state-query="""
+select  if(count(*)=7,'OK','NOK')
+
+from dim.dt_dates
+where substring(datecode, 1, 7) between substring(add_months(current_date, -2), 1, 7) and substring(add_months(current_date, -1), 1, 7)
+    and substring(datecode, 1, 7) in (select distinct period from MON.SPARK_FT_CBM_HANDSET_MONTHLY where period between substring(add_months(current_date, -2), 1, 7) and substring(add_months(current_date, -1), 1, 7))
+""""""
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
