--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT/compute-spark-kpi-user_location.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT/compute-spark-kpi-user_location.conf
@@ -22,6 +22,14 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-state-query=true
+flux.slice-state-query="""
+select  if(count(*)=7,'OK','NOK')
+
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct TRANSACTION_DATE from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT where SOURCE_TABLE = 'FT_USERS_REGION_LOCATION' and TRANSACTION_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
+""""""
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
