--- a/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-omny-transactions.conf
+++ b/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-omny-transactions.conf
@@ -23,6 +23,14 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-state-query=true
+flux.slice-state-query="""
+select  if(count(*)=7,'OK','NOK')
+
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct EVENT_DATE from AGG.SPARK_REVENUE_SUMMARY_DAILY where source_data = 'OM_TRANSACTIONS' and EVENT_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
+""""""
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
