--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -1235,7 +1235,7 @@ crontasks +=
     cron = "0 18/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-gprs-activity.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1259,7 +1259,7 @@ crontasks +=
     cron = "0 14 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-gprs-activity-post.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "50 minutes",
     extraTaskParams : [
@@ -1284,7 +1284,7 @@ crontasks +=
     cron = "0 17/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-gsm-traffic-revenue-daily.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1309,7 +1309,7 @@ crontasks +=
     cron = "0 7 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-overdraft.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "65 minutes",
     extraTaskParams : [
@@ -1334,7 +1334,7 @@ crontasks +=
     cron = "0 7 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-overdraft.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "65 minutes",
     extraTaskParams : [
@@ -1358,7 +1358,7 @@ crontasks +=
     cron = "0 40 */1 * * ?",
     configFile = "/PROD/CONF/ZEBRA/FT/load-spark-ft-refill.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1383,7 +1383,7 @@ crontasks +=
     cron = "0 41 */1 * * ?",
     configFile = "/PROD/CONF/ZEBRA/FT/load-spark-ft-subs-retail-zebra.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1408,7 +1408,7 @@ crontasks +=
     cron = "0 13 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-kpi-adjustement.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "65 minutes",
     extraTaskParams : [
@@ -1433,7 +1433,7 @@ crontasks +=
     cron = "0 48/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-spark-ft-contract-snapshot.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1458,7 +1458,7 @@ crontasks +=
     cron = "0 27/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-spark-ft-a-credit-transfer.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1483,7 +1483,7 @@ crontasks +=
     cron = "0 26/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-spark-ft-a-data-transfer.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1508,7 +1508,7 @@ crontasks +=
     cron = "0 24/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-spark-ft-a-emergency-data.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1533,7 +1533,7 @@ crontasks +=
     cron = "0 23/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-spark-ft-a-gprs-activity.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1558,7 +1558,7 @@ crontasks +=
     cron = "0 22/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-spark-ft-gsm-traffic-revenue-daily.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1583,7 +1583,7 @@ crontasks +=
     cron = "0 28/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-spark-ft-overdraft.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1608,7 +1608,7 @@ crontasks +=
     cron = "0 25/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-spark-ft-a-subscription.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "30 minutes",
     extraTaskParams : [
@@ -1656,7 +1656,7 @@ crontasks +=
       cron = "0 54 */1 * * ?",
       configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-conso-msisdn-day.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -1681,7 +1681,7 @@ crontasks +=
     cron = "55 10/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-subscription-msisdn-day.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "65 minutes",
     extraTaskParams : [
@@ -1706,7 +1706,7 @@ crontasks +=
     cron = "0 12 */1 * * ?",
     configFile = "/PROD/CONF/OTARIE/FT/load-spark-ft-otarie-data-traffic-day.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "60 minutes",
     extraTaskParams : [
@@ -1730,7 +1730,7 @@ crontasks +=
     cron = "0 50 */1 * * ?",
     configFile = "/PROD/CONF/RIA/load-spark-activation-all-by-day.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -1754,7 +1754,7 @@ crontasks +=
     cron = "0 38 */1 * * ?",
     configFile = "/PROD/CONF/VAS/load-spark-ft-vas-revenue-detail.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -1778,7 +1778,7 @@ crontasks +=
     cron = "0 36 */3 * * ?",
     configFile = "/PROD/CONF/VAS/load-spark-ft-other-vas.conf",
     taskType = "BATCH",
-     taskQueue = "compute",,
+     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
