--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-a-edr-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-a-edr-prpd-eqt.conf
@@ -34,14 +34,14 @@ flux.slice-has-state-query=true
 flux.slice-state-query="""
 select  if(count(*)=7,'OK','NOK')
 
-from dim.dt_dates between date_sub(current_date, 7) and date_sub(current_date, 1)
+from dim.dt_dates where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
     and datecode in (select distinct event_day from AGG.SPARK_FT_A_EDR_PRPD_EQT where event_day between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
-from dim.dt_dates between date_sub(current_date, 7) and date_sub(current_date, 1)
+from dim.dt_dates where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
     and datecode in (select distinct event_day from AGG.SPARK_FT_A_EDR_PRPD_EQT where event_day between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
