--- a/PROD/CONF/FT_IMEI_ONLINE/load-spark-ft-imei-online.conf
+++ b/PROD/CONF/FT_IMEI_ONLINE/load-spark-ft-imei-online.conf
@@ -14,6 +14,14 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-state-query=true
+flux.slice-state-query="""
+select  if(count(*)=7,'OK','NOK')
+
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct sdate from MON.SPARK_FT_IMEI_ONLINE where sdate between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
