--- a/PROD/CONF/RECYCLAGE/load-spark-ft-a-msisdn_recyclage.conf
+++ b/PROD/CONF/RECYCLAGE/load-spark-ft-a-msisdn_recyclage.conf
@@ -18,11 +18,27 @@ flux.name = "LOAD_SPARK_FT_A_MSISDN_RECYCLAGE"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -30
+flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-state-query=true
+flux.slice-state-query="""
+select  if(count(*)=7,'OK','NOK')
+
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct event_date from AGG.SPARK_FT_A_MSISDN_RECYCLAGE where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    date_format(datecode,'yyyy-MM-dd')
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct event_date from AGG.SPARK_FT_A_MSISDN_RECYCLAGE where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
 flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
